--- a/ej1/index.html
+++ b/ej1/index.html
@@ -3,9 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi discografia</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    div
+    <br>
+    <h1>BRING ME THE HORIZON, EL MEJOR GRUPO</h1>
+    <div class="discografia">
+        <div class="portada">
+            <img src="/img/post_human_album.jpg" alt="">
+        </div>
+        <div class="lista-canciones">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nº</th>
+                        <th>Título</th>
+                        <th>Dur.</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1.</td>
+                        <td>Top 10 Statues That Cried Blood</td>
+                        <td>3:03</td>
+                    </tr>
+                    <tr>
+                        <td>2.</td>
+                        <td>StRaNgErS</td>
+                        <td>2:48</td>
+                    </tr>
+                    <tr>
+                        <td>3.</td>
+                        <td>n/A</td>
+                        <td>4:05</td>
+                    </tr>
+                    <tr class="cancion-seleccionada">
+                        <td>4.</td>
+                        <td>LosT</td>
+                        <td>2:54</td>
+                    </tr>
+                    <tr>
+                        <td>5.</td>
+                        <td>A bullet W/ my Name on</td>
+                        <td>3:33</td>
+                    </tr>
+                    <tr>
+                        <td>6.</td>
+                        <td>R.i.p (DuskCOre remix)</td>
+                        <td>3:23</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
