Estructura basica Spotify + Decoración parallax

--- a/ej1/index.html
+++ b/ej1/index.html
@@ -40,7 +40,7 @@
                     </tr>
                     <tr class="cancion-seleccionada">
                         <td>4.</td>
-                        <td>LosT</td>
+                        <td>Die4U</td>
                         <td>2:54</td>
                     </tr>
                     <tr>
