arreglos varios + media barra opciones

--- a/ej2/index.html
+++ b/ej2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta nwhite !important;iewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify 2.0</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,8 +11,16 @@
         <nav>
             <img src="/img/spotify_logo.png" alt="Spotify logo">
             <div class="barra-busqueda">
-                <input type="text" placeholder="Buscar">
-                <img src="/img/search_icon.png" alt="Search icon">
+                <div class="home">
+                    <img src="/img/home_icon.png" alt="Home icon">
+                </div>
+                <div class="barra">
+                    <img src="/img/search_icon.png" alt="Search icon">
+                    <input type="text" placeholder="Buscar">
+                </div>
+                <button class="add">
+                    <img src="/img/add_icon.png" alt="Add icon">
+                </button>
             </div>
             <ul>
                 <li><a href="#">Descubrir Premium</a></li>
@@ -20,10 +28,12 @@
             </ul>
         </nav>
     </header>
+
     <div class="parallax-container">
         <p>✔️ Artista verificado</p>
         <h1>Bring Me The Horizon</h1>
     </div>
+
     <div class="main-grupo">
         <div class="barra-opciones">
             <div class="boton-play">
@@ -45,6 +55,7 @@
                 <li>Abrir en la aplicación del ordenador</li>
             </ul>
         </div>
+
         <div class="populares-grupo">
             <h2>POPULARES</h2>
             <table>
@@ -93,6 +104,7 @@
             </table>
             <p>See more</p>
         </div>
+
         <div class="seleccion-artista">
             <div class="seleccion-imagen">
                 <div class="seleccion-footer">
@@ -100,6 +112,7 @@
                 </div>
             </div>    
         </div>
+
         <div class="titulos-populares">
 
         </div>
