cambio estructura archivos

--- a/ej2/index.html
+++ b/ej2/index.html
@@ -9,17 +9,17 @@
 <body>
     <header>
         <nav>
-            <img src="/img/spotify_logo.png" alt="Spotify logo">
+            <img src="img/spotify_logo.png" alt="Spotify logo">
             <div class="barra-busqueda">
                 <div class="home">
-                    <img src="/img/home_icon.png" alt="Home icon">
+                    <img src="img/home_icon.png" alt="Home icon">
                 </div>
                 <div class="barra">
                     <img src="/img/search_icon.png" alt="Search icon">
                     <input type="text" placeholder="Buscar">
                 </div>
                 <button class="add">
-                    <img src="/img/add_icon.png" alt="Add icon">
+                    <img src="img/add_icon.png" alt="Add icon">
                 </button>
             </div>
             <ul>
@@ -37,7 +37,7 @@
     <div class="main-grupo">
         <div class="barra-opciones">
             <div class="boton-play">
-                <img src="/img/play_button.png" alt="">
+                <img src="img/play_button.png" alt="">
             </div>
             <button>Seguir</button>
             <p>. . .</p>
