barra opciones + Populares acabado

--- a/ej2/index.html
+++ b/ej2/index.html
@@ -39,8 +39,8 @@
             <div class="boton-play">
                 <img src="img/play_button.png" alt="">
             </div>
-            <button>Seguir</button>
-            <p>. . .</p>
+            <button class="follow">Seguir</button>
+            <button class="more">. . .</button>
             <ul class="menu-invisible">
                 <li>Seguir</li>
                 <li>No poner a este artista</li>
@@ -57,12 +57,12 @@
         </div>
 
         <div class="populares-grupo">
-            <h2>POPULARES</h2>
+            <h2>Populares</h2> <br>
             <table>
                 <tbody>
                     <tr>
                         <td>1.</td>
-                        <td><img src="aaa" alt=""></td>
+                        <td class="tabla-imagen"><img src="img/bmth_throne.jpg" alt=""></td>
                         <td>Throne</td>
                         <td>547.871.489</td>
                         <td><input type="checkbox"></td>
@@ -70,7 +70,7 @@
                     </tr>
                     <tr>
                         <td>2.</td>
-                        <td><img src="aaa" alt=""></td>
+                        <td class="tabla-imagen"><img src="img/bmth_CYFMH.jpg" alt=""></td>
                         <td>Can You Feel My Heart</td>
                         <td>714.423.436</td>
                         <td><input type="checkbox"></td>
@@ -78,15 +78,15 @@
                     </tr>
                     <tr>
                         <td>3.</td>
-                        <td><img src="aaa" alt=""></td>
-                        <td>WONDERWaLL-Spotify Singles</td>
+                        <td class="tabla-imagen"><img src="img/post_human_album.jpg" alt=""></td>
+                        <td>Top 10 staTues tHat CriEd bloOd</td>
                         <td>10.135.766</td>
                         <td><input type="checkbox"></td>
                         <td>4:00</td>
                     </tr>
                     <tr>
                         <td>4.</td>
-                        <td><img src="aaa" alt=""></td>
+                        <td class="tabla-imagen"><img src="img/bmth_kingslayer.jpg" alt=""></td>
                         <td>Kingslayer (fear. BABYMETAL)</td>
                         <td>260.859.270</td>
                         <td><input type="checkbox"></td>
@@ -94,15 +94,15 @@
                     </tr>
                     <tr>
                         <td>5.</td>
-                        <td><img src="aaa" alt=""></td>
+                        <td class="tabla-imagen"><img src="img/post_human_album.jpg" alt=""></td>
                         <td>DArkSide</td>
                         <td>111.856.391</td>
                         <td><input type="checkbox"></td>
                         <td>2:45</td>
                     </tr>
                 </tbody>
-            </table>
-            <p>See more</p>
+            </table> <br>
+            <p>See more</p> <br>
         </div>
 
         <div class="seleccion-artista">
