Trabajo base completo

--- a/ej2/index.html
+++ b/ej2/index.html
@@ -11,16 +11,10 @@
         <nav>
             <img src="img/spotify_logo.png" alt="Spotify logo">
             <div class="barra-busqueda">
-                <div class="home">
-                    <img src="img/home_icon.png" alt="Home icon">
-                </div>
                 <div class="barra">
                     <img src="/img/search_icon.png" alt="Search icon">
                     <input type="text" placeholder="Buscar">
                 </div>
-                <button class="add">
-                    <img src="img/add_icon.png" alt="Add icon">
-                </button>
             </div>
             <ul>
                 <li><a href="#">Descubrir Premium</a></li>
@@ -44,7 +38,7 @@
             <ul class="menu-invisible">
                 <li>Seguir</li>
                 <li>No poner a este artista</li>
-                <li>Ir a radio del artista</li>
+                <li>Ir a radio del artista</li>grupo
                 <li>Denunciar</li>
                 <li>Compartir</li>
                 <ul>
@@ -105,20 +99,109 @@
             <p>See more</p> <br>
         </div>
 
-        <div class="seleccion-artista">
-            <div class="seleccion-imagen">
-                <div class="seleccion-footer">
-                    <!-- Imagen y titulo -->
+        <div class="discografia-grupo">
+            <h2>Discografía</h2> <br>
+            <ul class="opciones-discografia">
+                <li><a href="#">Títulos populares</a></li>
+                <li><a href="#">Álbumes y colecciones</a></li>
+                <li><a href="#">Sencillos y EP</a></li>
+            </ul> <br>
+
+            <div class="lista-discografia">
+                <div class="discografia-tab">
+                    <img src="img/post_human_album.jpg" alt="">
+                    <p>DARKSIDE</p>
+                    <p>1999</p>
                 </div>
-            </div>    
-        </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_throne.jpg" alt="">
+                    <p>THRONE</p>
+                    <p>2002</p>
+                </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_kingslayer.jpg" alt="">
+                    <p>KINGSLAYER (fear. BABYMETAL)</p>
+                    <p>2004</p>
+                </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_kingslayer.jpg" alt="">
+                    <p>KINGSLAYER (fear. BABYMETAL)</p>
+                    <p>2004</p>
+                </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_kingslayer.jpg" alt="">
+                    <p>KINGSLAYER (fear. BABYMETAL)</p>
+                    <p>2004</p>
+                </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_kingslayer.jpg" alt="">
+                    <p>KINGSLAYER (fear. BABYMETAL)</p>
+                    <p>2004</p>
+                </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_kingslayer.jpg" alt="">
+                    <p>KINGSLAYER (fear. BABYMETAL)</p>
+                    <p>2004</p>
+                </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_kingslayer.jpg" alt="">
+                    <p>KINGSLAYER (fear. BABYMETAL)</p>
+                    <p>2004</p>
+                </div>
+            </div>
+        </div> <br> <hr> <br>
 
-        <div class="titulos-populares">
+        <div class="discografia-grupo">
+            <h2>Incluye a...</h2> <br>
 
-        </div>
+            <div class="lista-discografia">
+                <div class="discografia-tab">
+                    <img src="img/post_human_album.jpg" alt="">
+                    <p>DARKSIDE</p>
+                    <p>1999</p>
+                </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_throne.jpg" alt="">
+                    <p>THRONE</p>
+                    <p>2002</p>
+                </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_kingslayer.jpg" alt="">
+                    <p>KINGSLAYER (fear. BABYMETAL)</p>
+                    <p>2004</p>
+                </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_kingslayer.jpg" alt="">
+                    <p>KINGSLAYER (fear. BABYMETAL)</p>
+                    <p>2004</p>
+                </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_kingslayer.jpg" alt="">
+                    <p>KINGSLAYER (fear. BABYMETAL)</p>
+                    <p>2004</p>
+                </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_kingslayer.jpg" alt="">
+                    <p>KINGSLAYER (fear. BABYMETAL)</p>
+                    <p>2004</p>
+                </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_kingslayer.jpg" alt="">
+                    <p>KINGSLAYER (fear. BABYMETAL)</p>
+                    <p>2004</p>
+                </div>
+                <div class="discografia-tab">
+                    <img src="img/bmth_kingslayer.jpg" alt="">
+                    <p>KINGSLAYER (fear. BABYMETAL)</p>
+                    <p>2004</p>
+                </div>
+            </div>
+        </div> <br> <br> <br>
     </div>
+
     <footer>
         <h2>Información</h2> <br>
+        <p>© 2025 Spotify - Gabriel Santandreu Santonja</p> <br>
         <div class="footer-grupo">
             <img src="img/bring_me_the_horizon.jpg" alt="">
         </div> <br> <br>
@@ -161,8 +244,7 @@
                 <img src="img/X_icon.png" alt="Icono 3">
             </div>
         </div>
-        <br> <br> <br> <br> <br>
-        <p>© 2025 Spotify - Gabriel Santandreu Santonja</p>
+        <br> <br> <br>
     </footer>
 </body>
 </html>
