--- a/ej2/index.html
+++ b/ej2/index.html
@@ -163,43 +163,49 @@
             <div class="lista-discografia">
                 <div class="discografia-tab">
                     <img src="img/post_human_album.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>DARKSIDE</p>
                     <p>1999</p>
                 </div>
                 <div class="discografia-tab">
                     <img src="img/bmth_throne.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>THRONE</p>
                     <p>2002</p>
                 </div>
                 <div class="discografia-tab">
-                    <img src="img/bmth_kingslayer.jpg" alt="">
-                    <p>KINGSLAYER (fear. BABYMETAL)</p>
+                    <img src="img/kingslayer.jpg" alt="">
+                    <p>KINGSLAYER</p>
                     <p>2004</p>
                 </div>
                 <div class="discografia-tab">
-                    <img src="img/bmth_kingslayer.jpg" alt="">
-                    <p>KINGSLAYER (fear. BABYMETAL)</p>
-                    <p>2004</p>
+                    <img src="img/post_human_album.jpg" alt="">
+                    <p>A BULLET W/ MY NAME ON</p>
+                    <p>2016</p>
                 </div>
                 <div class="discografia-tab">
-                    <img src="img/bmth_kingslayer.jpg" alt="">
-                    <p>KINGSLAYER (fear. BABYMETAL)</p>
-                    <p>2004</p>
+                    <img src="img/post_human_album.jpg" alt="">
+                    <p>Top 10 statues that cried blood</p>
+                    <p>2019</p>
                 </div>
                 <div class="discografia-tab">
-                    <img src="img/bmth_kingslayer.jpg" alt="">
-                    <p>KINGSLAYER (fear. BABYMETAL)</p>
-                    <p>2004</p>
+                    <img src="img/Strangers.jpg" alt="">
+                    <p>STRANGERS</p>
+                    <p>2024</p>
                 </div>
                 <div class="discografia-tab">
-                    <img src="img/bmth_kingslayer.jpg" alt="">
-                    <p>KINGSLAYER (fear. BABYMETAL)</p>
-                    <p>2004</p>
+                    <img src="img/LosT.jpg" alt="">
+                    <p>LosT</p>
+                    <p>1998</p>
                 </div>
                 <div class="discografia-tab">
-                    <img src="img/bmth_kingslayer.jpg" alt="">
-                    <p>KINGSLAYER (fear. BABYMETAL)</p>
-                    <p>2004</p>
+                    <img src="img/post_human_album.jpg" alt="">
+                    <p>r.i.p. (duskcore remix)</p>
+                    <p>2014</p>
                 </div>
             </div>
         </div> <br> <br> <br>
