--- a/ej2/index.html
+++ b/ej2/index.html
@@ -126,31 +126,49 @@
                 </div>
                 <div class="discografia-tab">
                     <img src="img/kingslayer.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>KINGSLAYER</p>
                     <p>2004</p>
                 </div>
                 <div class="discografia-tab">
                     <img src="img/post_human_album.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>A BULLET W/ MY NAME ON</p>
                     <p>2016</p>
                 </div>
                 <div class="discografia-tab">
                     <img src="img/post_human_album.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>Top 10 statues that cried blood</p>
                     <p>2019</p>
                 </div>
                 <div class="discografia-tab">
                     <img src="img/Strangers.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>STRANGERS</p>
                     <p>2024</p>
                 </div>
                 <div class="discografia-tab">
                     <img src="img/LosT.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>LosT</p>
                     <p>1998</p>
                 </div>
                 <div class="discografia-tab">
                     <img src="img/post_human_album.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>r.i.p. (duskcore remix)</p>
                     <p>2014</p>
                 </div>
@@ -179,31 +197,49 @@
                 </div>
                 <div class="discografia-tab">
                     <img src="img/kingslayer.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>KINGSLAYER</p>
                     <p>2004</p>
                 </div>
                 <div class="discografia-tab">
                     <img src="img/post_human_album.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>A BULLET W/ MY NAME ON</p>
                     <p>2016</p>
                 </div>
                 <div class="discografia-tab">
                     <img src="img/post_human_album.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>Top 10 statues that cried blood</p>
                     <p>2019</p>
                 </div>
                 <div class="discografia-tab">
                     <img src="img/Strangers.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>STRANGERS</p>
                     <p>2024</p>
                 </div>
                 <div class="discografia-tab">
                     <img src="img/LosT.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>LosT</p>
                     <p>1998</p>
                 </div>
                 <div class="discografia-tab">
                     <img src="img/post_human_album.jpg" alt="">
+                    <div class="boton-play">
+                        <img src="img/play_button.png" alt="">
+                    </div>
                     <p>r.i.p. (duskcore remix)</p>
                     <p>2014</p>
                 </div>
